# job-boo

./: .gitignore  CONTRIBUTING.md  DEVELOPER.md  LICENSE  NOTES.md  README.md  config.example.yaml  pyproject.toml
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_job_source.md
.github/workflows/: ci.yml  labeler.yml  security.yml  stale.yml
.qlty/: qlty.toml
.qlty/configs/: .markdownlint.yaml
demo/: .dockerignore  Dockerfile  Dockerfile.interactive  TALK-TRACK.md  demo.sh  entrypoint.sh  motd.txt  run.sh  setup-demo-env.sh
src/job_boo/: __init__.py  cli.py  config.py  models.py
src/job_boo/ai/: __init__.py  base.py  claude.py  fallback.py  openai_provider.py  prompts.py  utils.py
src/job_boo/analytics/: dashboard.py
src/job_boo/apply/: submitter.py
src/job_boo/resume/: parser.py
src/job_boo/scoring/: matcher.py
src/job_boo/search/: __init__.py  adzuna.py  himalayas.py  jobicy.py  jobspy_source.py  jsearch.py  remotive.py  serpapi.py  themuse.py  url.py  usajobs.py
src/job_boo/storage/: db.py
src/job_boo/tailor/: tailorer.py
tests/: conftest.py  test_ai_utils.py  test_cli.py  test_config.py  test_dashboard.py  test_db.py  test_fallback.py  test_matcher.py  test_models.py  test_parser.py  test_search.py  test_search_init.py  test_submitter.py  test_tailorer.py
