[project]
name = "job-boo"
version = "0.1.0"
description = "AI-powered job search, resume tailoring, and application automation"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "pymupdf>=1.24",
    "httpx>=0.27",
    "anthropic>=0.40",
    "openai>=1.50",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "rich>=13.0",
    "reportlab>=4.0",
]

[project.scripts]
job-boo = "job_boo.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
